# endpoint-telemetry-anomaly-detector

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
src/: app.py  main.py
